// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography variant body must return the component template for variant body 1`] = `
<p
  class="Typography Typography_variant_body"
  data-testid="typography"
>
  children
</p>
`;

exports[`Typography variant h1 must return the component template for variant h1 1`] = `
<h1
  class="Typography Typography_variant_h1"
  data-testid="typography"
>
  children
</h1>
`;

exports[`Typography variant h2 must return the component template for variant h2 1`] = `
<h2
  class="Typography Typography_variant_h2"
  data-testid="typography"
>
  children
</h2>
`;

exports[`Typography variant h3 must return the component template for variant h3 1`] = `
<h3
  class="Typography Typography_variant_h3"
  data-testid="typography"
>
  children
</h3>
`;

exports[`Typography variant h4 must return the component template for variant h4 1`] = `
<h4
  class="Typography Typography_variant_h4"
  data-testid="typography"
>
  children
</h4>
`;

exports[`Typography variant h5 must return the component template for variant h5 1`] = `
<h5
  class="Typography Typography_variant_h5"
  data-testid="typography"
>
  children
</h5>
`;

exports[`Typography variant h6 must return the component template for variant h6 1`] = `
<h6
  class="Typography Typography_variant_h6"
  data-testid="typography"
>
  children
</h6>
`;

exports[`Typography variant span must return the component template for variant span 1`] = `
<span
  class="Typography Typography_variant_span"
  data-testid="typography"
>
  children
</span>
`;
